# Kick-Motion-Planning

Bezier Curve/: 25-10.csv  50-15.csv  Data Penting.xlsx  Kick_TA.motion
Bezier Curve/motion/: fk.py  hand_high.csv  hand_high2.csv  ik.csv  ik.py  plot.py  result.csv
Bezier Curve/neural/: RaisingFoot.csv  RaisingFoot1.csv  network.gv  network_Bezier.py  network_Bezier.py_pseudo.txt  path.csv  path1.csv  servo2.csv  servo_value.csv  servo_value1.csv  servo_value2.csv
Bezier Curve/path/: Bezier.py_pseudo.txt  GerakBola1.csv  GerakBola2.csv  GerakBola3.csv  Kick Plot.py  Kick.py  Kick.py_pseudo.txt  KickForward.csv  KickForward1.csv  RaisingFoot1.csv  forward_kinematics.py  inverse_kinmatics.py  main.py_pseudo.txt  main1.py  main2.py  pseudocode.py
File Simul ICHIRO/ros2_ws/src/framework_math/: package.xml
File Simul ICHIRO/ros2_ws/src/framework_math/include/: math.h
File Simul ICHIRO/ros2_ws/src/framework_math/include/math/: point.h
File Simul ICHIRO/ros2_ws/src/framework_math/src/: plane.cpp  point.cpp
File Simul ICHIRO/webots_ws/src/framework_math/: CMakeLists.txt
File Simul ICHIRO/webots_ws/src/framework_math/include/math/: matrix.h  plane.h
File Simul ICHIRO/webots_ws/src/framework_math/src/: matrix.cpp  vector.cpp
Humanoid_robot/worlds/: .empty.wbproj  .model.wbproj  model.wbt
robotis_webots_test/protos/: .Darwin-opHinge2Robocup.cache  .Op2local.cache  .RoboCupBackground.cache  .RobocupGoal.cache  .RobocupSoccerField.cache  .RobocupTexturedSoccerBall.cache  .UMARU.cache  .darwin.cache  .four_wheel.cache  RobocupGoal.proto  darwin.proto  four_wheel.proto
robotis_webots_test/worlds/: .soccer.wbproj  .soccer.wbt.wbproj  .soccer2.wbproj  .soccer3.wbproj  (+5 more)
(+273 files in other folders)
