<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>framework_math</name>
  <version>1.0.0</version>
  <description>Math library of ICHIRO ITS legacy framework</description>
  <maintainer email="segara2410@gmail.com">Segara Bhagas Dagsapurwa</maintainer>
  <license>MIT License</license>
  <url>https://github.com/ichiro-its/</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
